--- a/code.html
+++ b/code.html
@@ -44,7 +44,7 @@ grid-template-rows: 150px 150px 150px;
 
 }
 .tile{
-background: url(https://images.unsplash.com/photo-1573152565405-f24a2b508023?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1931&q=80);
+background: url(https://upload.wikimedia.org/wikipedia/commons/a/af/All_Gizah_Pyramids.jpg);
 font-weight:900;
 font-family: 'Bruno Ace', cursive;
 font-size:2em;
